# forge-launcher

./: .gitignore  Handoff.md  README.md  cleanup-report.html  design.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: checks.yml
config/: games.json
docs/: API.md  ARCHITECTURE.md  DOWNLOADING.md  ENV_VARS.md  HANDOFF.md  HANDOFF2.md  LAUNCH_ARGS.md  NATIVE_SWIFTUI.md  PROJECT_LAYOUT.md  RUNTIME_PROFILES.md  SETUP.md  STEAM.md  overwatch.md
macos/ForgeNative/: Package.swift
macos/ForgeNative/Sources/ForgeNative/: ForgeAppDelegate.swift  ForgeAppRow.swift  ForgeAppScanner.swift  ForgeAppsPanel.swift  ForgeBackendEnvironment.swift  ForgeContentView.swift  ForgeCrossOver.swift  ForgeGraphicsEnvironment.swift  ForgeLaunchSupport.swift  ForgeModels.swift  ForgeNativeApp.swift  ForgePersistence.swift  ForgeRuntimeComponents.swift  ForgeRuntimePanel.swift  ForgeRuntimeStaging.swift  ForgeSidebar.swift  ForgeSidebarComponents.swift  ForgeStore.swift  ForgeUIComponents.swift  ForgeVisualStyles.swift  GameCompatibilityProfiles.swift  GameProfileEditorSheet.swift  GameProfileTextParsing.swift
macos/ForgeNative/Tests/ForgeNativeTests/: CompatibilityProfileTests.swift  ForgeAppScannerTests.swift  ForgeBackendEnvironmentTests.swift  ForgeCrossOverTests.swift  (+7 more)
scripts/: build-forge-wine-from-sources.sh  forge-doctor.sh  forge-kill.sh  overwatch-test-once.sh  run-native-app.sh  setup-macos.sh  steam-window-shot.swift  test-steam-launch.sh
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: bottles.rs  config.rs  downloader.rs  launcher.rs  main.rs  saves.rs  steam.rs
src/lib/: icons.ts  tauri.ts
src/lib/components/: GameCard.svelte  GameDownload.svelte  Icon.svelte  SteamImport.svelte  Toast.svelte
src/lib/stores/: config.ts  games.ts  index.ts  launcher.ts
src/lib/types/: index.ts
